@@ -54,6 +54,9 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.security.DigestOutputStream;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -79,6 +82,7 @@ import com.openexchange.log.LogFactory;
 import com.openexchange.server.services.ServerServiceRegistry;
 import com.openexchange.tools.images.ImageTransformations;
 import com.openexchange.tools.images.ScaleType;
+import com.openexchange.tools.images.TransformedImage;
 import com.openexchange.tools.images.impl.ImageInformation;
 import com.openexchange.tools.stream.UnsynchronizedByteArrayOutputStream;
 
@@ -181,6 +185,13 @@ public class ImageTransformationsImpl implements ImageTransformations {
         return null == bytes ? null : Streams.newByteArrayInputStream(bytes);
     }
 
+    @Override
+    public TransformedImage getTransformedImage(String formatName) throws IOException {
+        String imageFormat = getImageFormat(formatName);
+        BufferedImage bufferedImage = getImage(imageFormat);
+        return writeTransformedImage(bufferedImage, imageFormat);
+    }
+
     /**
      * Gets a value indicating whether the denoted format name leads to transformations or not.
      *
@@ -249,6 +260,39 @@ public class ImageTransformationsImpl implements ImageTransformations {
             }
         }
         return false;
+    }
+
+    /**
+     * Writes out an image into a byte-array and wraps it into a transformed image.
+     *
+     * @param image The image to write
+     * @param formatName The format to use, e.g. "jpeg" or "tiff"
+     * @return The image data
+     * @throws IOException
+     */
+    private TransformedImage writeTransformedImage(BufferedImage image, String formatName) throws IOException {
+        if (null == image) {
+            return null;
+        }
+        DigestOutputStream digestOutputStream = null;
+        UnsynchronizedByteArrayOutputStream outputStream = null;
+        try {
+            outputStream = new UnsynchronizedByteArrayOutputStream(8192);
+            digestOutputStream = new DigestOutputStream(outputStream, MessageDigest.getInstance("MD5"));
+            if (needsCompression(formatName)) {
+                writeCompressed(image, formatName, digestOutputStream);
+            } else {
+                write(image, formatName, digestOutputStream);
+            }
+            byte[] imageData = outputStream.toByteArray();
+            byte[] md5 = digestOutputStream.getMessageDigest().digest();
+            return new TransformedImageImpl(
+                image.getWidth(), image.getHeight(), null != imageData ? imageData.length : 0, formatName, imageData, md5);
+        } catch (NoSuchAlgorithmException e) {
+            throw new IOException(e);
+        } finally {
+            Streams.close(digestOutputStream, outputStream);
+        }
     }
 
     /**
